# HarmonyOSSkiaTest

./: .gitignore  build-profile.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  DisplayParams.h  DrawPoint.h  GLWindowContext.cpp  GLWindowContext.h  GLWindowContext_ohos.cpp  Surface.cpp  Surface.h  WindowContext.cpp  WindowContext.h  WindowContextFactory_ohos.h  napi_init.cpp
entry/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
entry/src/main/cpp/render/: egl_core.cpp  plugin_render.cpp  plugin_render.h
entry/src/main/cpp/skia/include/core/: SkCanvas.h  SkFontStyle.h
entry/src/main/cpp/utils/napi/: napi_utils.cpp  napi_utils.h
entry/src/main/ets/pages/: Index.ets
entry/src/mock/: mock-config.json5
